Removed duplication check. Added PUT and count. Added README
